--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 
+message("build type ${CMAKE_BUILD_TYPE}")
 project(billing)
-include_directories(deps/mysql-connector-c-6.1.11-src/include build/mysql/include)
-link_directories(build/mysql/libmysql)
 # 静态链接
 set(CMAKE_CXX_FLAGS "-static -g0 -Wall ${CMAKE_CXX_FLAGS}")
 set(CMAKE_C_FLAGS "-static ${CMAKE_C_FLAGS}")
-
-add_executable(${CMAKE_PROJECT_NAME} main.cpp)
-target_link_libraries(${CMAKE_PROJECT_NAME} mysqlclient pthread dl)
-
+add_subdirectory(server)
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} server)
