--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ set(CMAKE_C_FLAGS "-static ${CMAKE_C_FLAGS}")
 add_subdirectory(server)
 add_executable(${PROJECT_NAME} main.cpp)
 target_link_libraries(${PROJECT_NAME} server)
+file(COPY config.yaml DESTINATION ${CMAKE_BINARY_DIR})
