--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories(../deps/mysql-connector-c-6.1.11-src/include ${CMAKE_BINARY_
 aux_source_directory(cmd cmdSourceList)
 aux_source_directory(common commonSourceList)
 aux_source_directory(services servicesSourceList)
-set(serverSourceList "${cmdSourceList};${servicesSourceList};${commonSourceList}" common/io_status.h)
+set(serverSourceList "${cmdSourceList};${servicesSourceList};${commonSourceList}")
 #
 add_library(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/deps/mysql/include/mysql_version.h ${serverSourceList})
 target_link_libraries(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/deps/mysql/libmysql/libmysqlclient.a dl pthread yaml-cpp)
