--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -10,7 +10,8 @@ aux_source_directory(cmd cmdSourceList)
 aux_source_directory(common commonSourceList)
 aux_source_directory(services servicesSourceList)
 aux_source_directory(bhandler bhandlerSourceList)
-set(serverSourceList "${cmdSourceList};${servicesSourceList};${commonSourceList};${bhandlerSourceList}")
+aux_source_directory(debug debugSourceList)
+set(serverSourceList "${cmdSourceList};${servicesSourceList};${commonSourceList};${bhandlerSourceList};${debugSourceList}")
 #
 add_library(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/deps/mysql/include/mysql_version.h ${serverSourceList})
 target_link_libraries(${PROJECT_NAME} ${CMAKE_BINARY_DIR}/deps/mysql/libmysql/libmysqlclient.a dl pthread yaml-cpp)
