--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -3,7 +3,7 @@ project(server)
 add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/deps/mysql/include/mysql_version.h ${CMAKE_BINARY_DIR}/deps/mysql/libmysql/libmysqlclient.a
         COMMAND mkdir -p ${CMAKE_BINARY_DIR}/deps/mysql
         COMMAND cmake -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_C_FLAGS=-Wno-error -DCMAKE_CXX_FLAGS=-Wno-error -S ${PROJECT_SOURCE_DIR}/../deps/mysql-connector-c-6.1.11-src -B ${CMAKE_BINARY_DIR}/deps/mysql
-        COMMAND cmake --build ${CMAKE_BINARY_DIR}/deps/mysql --target mysqlclient -v)
+        COMMAND cmake --build ${CMAKE_BINARY_DIR}/deps/mysql --target mysqlclient)
 include_directories(../deps/mysql-connector-c-6.1.11-src/include ${CMAKE_BINARY_DIR}/deps/mysql/include ../deps/yaml-cpp/include)
 #
 set(serverSourceList ${CMAKE_BINARY_DIR}/deps/mysql/include/mysql_version.h)
