--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,8 +1,14 @@
 project(server)
 
+set(mysqlCFlagOpt "")
+set(mysqlCxxFlagOpt "")
+if (BILLING_BUILD_M32)
+  set(mysqlCFlagOpt "-DCMAKE_C_FLAGS=-m32")
+  set(mysqlCxxFlagOpt "-DCMAKE_CXX_FLAGS=-m32")
+endif()
 add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/deps/mysql/include/mysql_version.h ${CMAKE_BINARY_DIR}/deps/mysql/libmysql/libmysqlclient.a
         COMMAND mkdir -p ${CMAKE_BINARY_DIR}/deps/mysql
-        COMMAND cmake -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_C_FLAGS=-Wno-error -DCMAKE_CXX_FLAGS=-Wno-error -S ${PROJECT_SOURCE_DIR}/../deps/mysql-connector-c-6.1.11-src -B ${CMAKE_BINARY_DIR}/deps/mysql
+        COMMAND cmake -DCMAKE_BUILD_TYPE=MinSizeRel ${mysqlCFlagOpt} ${mysqlCxxFlagOpt} -S ${PROJECT_SOURCE_DIR}/../deps/mysql-connector-c-6.1.11-src -B ${CMAKE_BINARY_DIR}/deps/mysql
         COMMAND cmake --build ${CMAKE_BINARY_DIR}/deps/mysql --target mysqlclient)
 include_directories(../deps/mysql-connector-c-6.1.11-src/include ${CMAKE_BINARY_DIR}/deps/mysql/include ../deps/yaml-cpp/include)
 #
