--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,11 @@ else()
   set(CMAKE_CXX_FLAGS "-static ${CMAKE_CXX_FLAGS}")
   set(CMAKE_C_FLAGS "-static ${CMAKE_C_FLAGS}")
 endif()
+
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 add_subdirectory(deps/yaml-cpp)
 add_subdirectory(server)
 add_executable(${PROJECT_NAME} main.cpp)
+set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-Wl,-rpath,./lib")
 target_link_libraries(${PROJECT_NAME} server)
-file(COPY config.yaml DESTINATION ${CMAKE_BINARY_DIR})
+file(COPY config.yaml DESTINATION ${PROJECT_BINARY_DIR})
