--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,17 +2,17 @@ project(server)
 
 set(mysqlCFlagOpt "")
 set(mysqlCxxFlagOpt "")
-set(mysqlLibOutPath ${CMAKE_BINARY_DIR}/deps/mysql/libmysql/libmysqlclient.a)
+set(mysqlLibOutPath ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libmysqlclient.a)
 if (BILLING_BUILD_M32)
     set(mysqlCFlagOpt "-DCMAKE_C_FLAGS=-m32")
     set(mysqlCxxFlagOpt "-DCMAKE_CXX_FLAGS-m32")
 endif ()
 if (BILLING_BUILD_SHARED)
-  set(mysqlLibOutPath ${CMAKE_BINARY_DIR}/deps/mysql/libmysql/libmysqlclient.so)
+  set(mysqlLibOutPath ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libmysqlclient.so)
 endif()
 add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/deps/mysql/include/mysql_version.h ${mysqlLibOutPath}
         COMMAND mkdir -p ${CMAKE_BINARY_DIR}/deps/mysql
-        COMMAND cmake -DCMAKE_BUILD_TYPE=MinSizeRel ${mysqlCFlagOpt} ${mysqlCxxFlagOpt} -S ${PROJECT_SOURCE_DIR}/../deps/mysql-connector-c-6.1.11-src -B ${CMAKE_BINARY_DIR}/deps/mysql
+        COMMAND cmake -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${mysqlCFlagOpt} ${mysqlCxxFlagOpt} -S ${PROJECT_SOURCE_DIR}/../deps/mysql-connector-c-6.1.11-src -B ${CMAKE_BINARY_DIR}/deps/mysql
         COMMAND cmake --build ${CMAKE_BINARY_DIR}/deps/mysql)
 include_directories(../deps/mysql-connector-c-6.1.11-src/include ${CMAKE_BINARY_DIR}/deps/mysql/include ../deps/yaml-cpp/include)
 #
@@ -28,5 +28,6 @@ endforeach ()
 #endforeach()
 #
 add_library(${PROJECT_NAME} "${serverSourceList}")
+set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-Wl,-rpath,./lib")
 target_link_libraries(${PROJECT_NAME} ${mysqlLibOutPath} dl pthread yaml-cpp)
 
