--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,21 +2,25 @@ project(server)
 
 set(mysqlCFlagOpt "")
 set(mysqlCxxFlagOpt "")
-set(mysqlLibOutPath ${CMAKE_BINARY_DIR}/deps/mysql/libmysql/libmysqlclient.a)
+set(mysqlBinaryDir ${PROJECT_BINARY_DIR}/../deps/mysql)
+set(mysqlVersionFilePath ${mysqlBinaryDir}/include/mysql_version.h)
+set(mysqlLibOutPath ${mysqlBinaryDir}/libmysql/libmysqlclient.a)
+set(mysqlLibTarget mysqlclient)
 if (BILLING_BUILD_M32)
     set(mysqlCFlagOpt "-DCMAKE_C_FLAGS=-m32")
     set(mysqlCxxFlagOpt "-DCMAKE_CXX_FLAGS-m32")
 endif ()
 if (BILLING_BUILD_SHARED)
     set(mysqlLibOutPath ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libmysqlclient.so)
+    set(mysqlLibTarget libmysql)
 endif ()
-add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/deps/mysql/include/mysql_version.h ${mysqlLibOutPath}
+add_custom_command(OUTPUT ${mysqlVersionFilePath} ${mysqlLibOutPath}
         COMMAND mkdir -p ${CMAKE_BINARY_DIR}/deps/mysql
-        COMMAND cmake -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${mysqlCFlagOpt} ${mysqlCxxFlagOpt} -S ${PROJECT_SOURCE_DIR}/../deps/mysql-connector-c-6.1.11-src -B ${CMAKE_BINARY_DIR}/deps/mysql
-        COMMAND cmake --build ${CMAKE_BINARY_DIR}/deps/mysql)
-include_directories(../deps/mysql-connector-c-6.1.11-src/include ${CMAKE_BINARY_DIR}/deps/mysql/include ../deps/yaml-cpp/include)
+        COMMAND cmake -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${mysqlCFlagOpt} ${mysqlCxxFlagOpt} -S ${PROJECT_SOURCE_DIR}/../deps/mysql-connector-c-6.1.11-src -B ${mysqlBinaryDir}
+        COMMAND cmake --build ${mysqlBinaryDir} --target ${mysqlLibTarget})
+include_directories(../deps/mysql-connector-c-6.1.11-src/include ${mysqlBinaryDir}/include ../deps/yaml-cpp/include)
 #
-set(serverSourceList ${CMAKE_BINARY_DIR}/deps/mysql/include/mysql_version.h)
+set(serverSourceList ${mysqlVersionFilePath})
 set(sourceDirList bhandler cmd common debug models services)
 foreach (sourceDir IN LISTS sourceDirList)
     aux_source_directory(${sourceDir} nodeSourceList)
