--- a/.github/workflows/echo_version.yml
+++ b/.github/workflows/echo_version.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          submodules: 'true'
 
       - name: Build
         run: ./build.sh shared
